metadata1/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ATI_Email__c</fullName>
        <description>An email will be sent out to this person when an invoice is marked finalized.</description>
        <inlineHelpText>Associated ATI email for finalized invoice notification.</inlineHelpText>
        <label>ATI Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <description>Referenced in New Job Inquiry Flow</description>
        <formula>BillingStreet &amp; &quot;, &quot; &amp; BillingCity &amp; &quot;, &quot;&amp; BillingState &amp; &quot;, &quot;&amp; BillingPostalCode</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_CityStateZip__c</fullName>
        <formula>BillingCity &amp; &quot;, &quot; &amp;  BillingState &amp; &quot; &quot; &amp;   IF(LEN(BillingPostalCode)&lt;5  , &quot;0&quot; &amp; BillingPostalCode, BillingPostalCode)</formula>
        <label>Account Billing CityStateZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_and_Address__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp;  Account_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name and Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_from_Data_com__c</fullName>
        <label>Account Phone from Data.com</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <description>Concur custom field</description>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alt_Cell__c</fullName>
        <label>Alt #./ Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BigTimeSID__c</fullName>
        <label>BigTime SID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BigTime_Last_Sync__c</fullName>
        <label>BigTime Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BigTime_Status__c</fullName>
        <label>BigTime Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Collections_Notes__c</fullName>
        <label>Collections Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent/ Brokerage</fullName>
                </value>
                <value>
                    <fullName>Consulting Firm</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Home Builder</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Independent Adj. Co.</fullName>
                </value>
                <value>
                    <fullName>Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Law Firm</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Municipality/ Govt.</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Property Owner</fullName>
                </value>
                <value>
                    <fullName>Public Adj. Co.</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
                <value>
                    <fullName>School/ University</fullName>
                </value>
                <value>
                    <fullName>Sub-Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to report on user usage of Cirrus Insight.</description>
        <label>Created_by_Cirrus_Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether this Account has an active ERA agreement</description>
        <label>ERA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Date__c</fullName>
        <label>Existing Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <description>Concur custom field</description>
        <label>Final/Paid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>General Services Administration Account</description>
        <inlineHelpText>General Services Administration Accounts</inlineHelpText>
        <label>GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeoPointe_GeoLocation__c</fullName>
        <label>GeoPointe GeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Geocode_Quality__c</fullName>
        <label>Geocode Quality</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode_Retrieval_Time__c</fullName>
        <label>Geocode Retrieval Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Revenue_Last_Year__c</fullName>
        <description>Job revenue of this account last year</description>
        <label>Job Revenue Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>Picklist to indicate whether an Account is New Business or Existing Business, populated via workflows &apos;New Business Type Population&apos; and &apos;Existing Business Type Population&apos; determined by Last Job Date.</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Date__c</fullName>
        <description>Field to capture the date that the last Job was created against this Account.  Populated via code to be used in bonus calculations to determine New Business, which are Jobs created against an Account that have not had any Jobs created against them in the last 18 months.  Accounts will then remain as &apos;New Business&apos; for 18 months after that first Job.</description>
        <label>Last Job Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Timberland_Update__c</fullName>
        <label>Last Successful Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Timberland_Update__c</fullName>
        <label>Last Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MSA_Activity_ID__c</fullName>
        <label>MSA Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Dup_Activity_ID__c</fullName>
        <label>MSA Dup Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Submitter_Email__c</fullName>
        <label>MSA Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Account lookup field is to be used for the account consolidation to re-associate all merged duplicate account related records (Jobs, Contacts, etc.) with the Master Account via code and to create Billing Address records linked to the Master Account.  Once all data has been migrated and merged Accounts are deleted, this field can also be deleted.</description>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>National_Account_Chicago__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to be used by Chicago office to filter National Accounts run through their office.  National Account checkbox should also be checked.</description>
        <inlineHelpText>This designates this account as a national account through Chicago.</inlineHelpText>
        <label>National Account - Chicago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box designates the account as a National Account.</description>
        <label>National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Business_Type_Date__c</fullName>
        <description>Date that an Account is set to &apos;New Business,&apos; in order to automatically set to &apos;Existing Business&apos; after 18 months via workflow &apos;Existing Business Type Population,&apos; to calculate commission calculations</description>
        <label>New Business Type Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <formula>Last_Job_Date__c - Previous_Job_Date__c</formula>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Jobs_Last_Year__c</fullName>
        <description>Count of number of jobs created last year related to this Account.  Populated via code.</description>
        <label>Number of Jobs Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Marketing_Notes_This_Year__c</fullName>
        <label>Number of Marketing Notes This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Manager lookup populated via Process Builder flow &apos;Office Manager Population onto Account&apos; used in Account Creation Approval Process</description>
        <label>Office Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Office Manager)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Account_Address__c</fullName>
        <formula>BillingStreet  &amp; &quot;,&quot; &amp;  BillingCity  &amp; &quot;,&quot; &amp;  BillingState</formula>
        <label>Person Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Billing_City__c</fullName>
        <description>Used in New Job Inquiry visual flow</description>
        <formula>BillingCity</formula>
        <label>Person Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Billing_State__c</fullName>
        <description>Used in New Job Inquiry visual flow</description>
        <formula>BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Billing_Street__c</fullName>
        <description>Used in New Job Inquiry visual flow</description>
        <formula>BillingStreet</formula>
        <label>Person Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Billing_Zip_Postal_Code__c</fullName>
        <description>Used in New Job Inquiry visual flow</description>
        <formula>BillingPostalCode</formula>
        <label>Person Billing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Date__c</fullName>
        <description>Job created against this account prior to the last Job-- populated via code.</description>
        <label>Previous Job Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Account__c</fullName>
        <description>Indicate an account for program account. Default value will be no unless marked yes.
Help Text</description>
        <label>Program Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Affiliated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP Affiliated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Hours__c</fullName>
        <label>RFP Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_Timberline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Timberline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unapproved</fullName>
                    <default>true</default>
                    <label>Unapproved</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Group_Timber__c</fullName>
        <formula>Tax_Group__r.Timberline_Id__c</formula>
        <label>Tax Group (Timberline)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timberline_BillingStreet1__c</fullName>
        <label>Timberline_BillingStreet1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timberline_BillingStreet2__c</fullName>
        <label>Timberline_BillingStreet2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Name__c</fullName>
        <formula>LEFT(IF( ISBLANK( Name ),  LastName   &amp; &quot;; &quot; &amp; FirstName ,  Name ),35)</formula>
        <label>Timberline Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Number_Sequence_New__c</fullName>
        <externalId>true</externalId>
        <label>Timberline Customer Number Sequence New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Number_Sequence__c</fullName>
        <formula>/*VALUE(MID(Timberline_Customer_Number__c, 1, 5) + MID(Timberline_Customer_Number__c, 7, 3))*/
VALUE(MID(Timberline_Customer_Number__c, 1, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timberline Customer Number Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>Timberline Customer Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Portal_Link__c</fullName>
        <label>Vendor Portal Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vendor_Portal_Password__c</fullName>
        <label>Vendor Portal Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Portal_Username__c</fullName>
        <label>Vendor Portal Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_City_A__c</fullName>
        <label>ZI Company City_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Country_A__c</fullName>
        <label>ZI Company Country_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Description_A__c</fullName>
        <label>ZI Company Description_A</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Employees_A__c</fullName>
        <label>ZI Company Employees_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Fax_A__c</fullName>
        <label>ZI Company Fax_A</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Name_A__c</fullName>
        <label>ZI Company Name_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Phone_A__c</fullName>
        <label>ZI Company Phone_A</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Profile_URL_A__c</fullName>
        <label>ZI Company Profile URL_A</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Ranking_A__c</fullName>
        <label>ZI Company Ranking_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_State_A__c</fullName>
        <label>ZI Company State_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Street_A__c</fullName>
        <label>ZI Company Street_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Website_A__c</fullName>
        <label>ZI Company Website_A</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Zip_A__c</fullName>
        <label>ZI Company Zip_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_is_Defunct_A__c</fullName>
        <label>ZI Company is Defunct_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Employee_Range_A__c</fullName>
        <label>ZI Employee Range_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_NAICS_Codes_A__c</fullName>
        <label>ZI NAICS Codes_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Parent_Company_ID_A__c</fullName>
        <label>ZI Parent Company ID_A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Parent_Company_Name_A__c</fullName>
        <label>ZI Parent Company Name_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Revenue_A__c</fullName>
        <label>ZI Revenue_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Revenue_Range_A__c</fullName>
        <label>ZI Revenue Range_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_SIC_Codes_A__c</fullName>
        <label>ZI SIC Codes_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Ticker_Symbol_A__c</fullName>
        <label>ZI Ticker Symbol_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Ultimate_Parent_Company_ID_A__c</fullName>
        <label>ZI Ultimate Parent Company ID_A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Ultimate_Parent_Company_Name_A__c</fullName>
        <label>ZI Ultimate Parent Company Name_A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tdc_tsw__Last_Sender_Number__c</fullName>
        <description>Used for Sticky sender to store the last sender number</description>
        <label>Last Sender Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__SMS_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zisf__Company_ID__c</fullName>
        <label>Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
        <defaultValue>&apos;Not Compared&apos;</defaultValue>
        <label>ZoomInfo Complete Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Last_Clean_Run__c</fullName>
        <description>Date/time refers to last time ZoomInfo Clean ran for record.</description>
        <inlineHelpText>Date/time refers to last time ZoomInfo Clean ran for record.</inlineHelpText>
        <label>ZoomInfo Last Clean Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zisf__Zoom_Clean_Status__c</fullName>
        <label>ZoomInfo Clean Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Different</fullName>
                    <color>#F3D904</color>
                    <label>Different</label>
                </value>
                <value>
                    <fullName>In Sync</fullName>
                    <color>#33CC00</color>
                    <label>In Sync</label>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                    <color>#EFAE73</color>
                    <label>Not Found</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <color>#A53711</color>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Not Compared</fullName>
                    <color>#AFCADF</color>
                    <default>true</default>
                    <label>Not Compared</label>
                </value>
                <value>
                    <fullName>Clean</fullName>
                    <color>#009900</color>
                    <label>Clean</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Accounts_Sync_to_Timberline_Checked</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>Send_to_Timberline__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Timberline_Customer_Number__pc</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_to_Timberline__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Accounts Sync to Timberline Checked</label>
    </listViews>
    <listViews>
        <fullName>All_mine</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Timberline_Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All mine</label>
    </listViews>
    <listViews>
        <fullName>My_Rejected_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>New Accounts Created This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Accounts_Last_30_Days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Office__pc</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>New Accounts Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Sync_All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Send_to_Timberline__c</columns>
        <columns>Last_Successful_Timberland_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Timberline_Customer_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sync All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Unapproved_Rejected_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Unapproved</value>
        </filters>
        <label>Unapproved/Rejected Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Company, Institute, etc.</description>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Address_Max_Length</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( BillingStreet )  &gt; 30 &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Account Billing Street Address cannot exceed 60 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_City_Max_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( BillingCity )  &gt; 15 &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
        <errorDisplayField>BillingCity</errorDisplayField>
        <errorMessage>Account Billing City cannot exceed 15 characters</errorMessage>
    </validationRules>
</CustomObject>